# CProfiler

./: CMakeLists.txt  README.md  add_profiling.py  main.cpp
include/: Timer.h
src/: main.cpp
